[gd_scene load_steps=3 format=2]

[ext_resource path="res://tscn/bat/new_buttongroup.tres" type="ButtonGroup" id=1]
[ext_resource path="res://tscn/bat/hurt/hurtPan.gd" type="Script" id=2]

[node name="hurtPan" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 85.0
margin_right = 701.0
margin_bottom = 355.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer"]

[node name="hurtItem" type="NinePatchRect" parent="."]
margin_top = 42.0
margin_right = 530.0
margin_bottom = 72.0
rect_min_size = Vector2( 530, 30 )

[node name="name" type="Button" parent="hurtItem"]
visible = false
margin_left = 8.0
margin_right = 88.0
margin_bottom = 30.0
toggle_mode = true
group = ExtResource( 1 )
text = "名字"
expand_icon = true

[node name="a" type="Button" parent="hurtItem"]
margin_left = 172.0
margin_right = 292.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.980392, 0.4, 0.4, 1 )
toggle_mode = true
group = ExtResource( 1 )
text = "伤害"

[node name="d" type="Button" parent="hurtItem"]
margin_left = 309.0
margin_right = 429.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.823529, 0.823529, 0.823529, 1 )
toggle_mode = true
group = ExtResource( 1 )
text = "承伤"

[node name="h" type="Button" parent="hurtItem"]
margin_left = 445.0
margin_right = 565.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.45098, 0.796078, 0.411765, 1 )
toggle_mode = true
group = ExtResource( 1 )
text = "治疗/护盾"

[node name="b" type="Button" parent="hurtItem"]
margin_left = 581.0
margin_right = 701.0
margin_bottom = 38.0
custom_colors/font_color = Color( 0.560784, 0.505882, 1, 1 )
toggle_mode = true
group = ExtResource( 1 )
text = "增益/负面"

[connection signal="visibility_changed" from="." to="." method="_on_hurtPan_visibility_changed"]
[connection signal="pressed" from="hurtItem/a" to="." method="_on_a_pressed"]
[connection signal="pressed" from="hurtItem/d" to="." method="_on_d_pressed"]
[connection signal="pressed" from="hurtItem/h" to="." method="_on_h_pressed"]
[connection signal="pressed" from="hurtItem/b" to="." method="_on_b_pressed"]
